--- a/ejercicio/css/estilo.css
+++ b/ejercicio/css/estilo.css
@@ -1,17 +1,20 @@
 body{
   background-color:white;
   color: #1162ac;
+  padding: 8px;
 }
 #titulo{
+  background-color:#A3C2FF;
 	color: chocolate;
 	font-family: helvetica;
 	font-size: 20px;
 	text-shadow: 2px 4px 6px #1162ac;
-	border: 2px inset grey;
+	border: 2px inset yellow;
+  padding: 8px;
 }
 #sticker{
    width:400px;
-   height:30px;
+   height:15px;
    border:3px solid brown;
    border-radius:17px;
    padding: 8px;
