--- a/ejercicio/css/estilo.css
+++ b/ejercicio/css/estilo.css
@@ -9,7 +9,7 @@ body{
 	font-family: helvetica;
 	font-size: 20px;
 	text-shadow: 2px 4px 6px #1162ac;
-	border: 2px inset yellow;
+	border: 2px inset grey;
   padding: 8px;
 }
 #sticker{
