--- a/modulo_2/lab1/styles.css
+++ b/modulo_2/lab1/styles.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Oswald);
+@import url(https://fonts.googleapis.com/css?family=Montserrat);
 body{
   color: #333;
   font-family: Arial, "Monaco", sans-serif;
@@ -67,7 +67,7 @@ body{
 }
 @media screen and (max-width: 320px){
   #container header{
-    font-family: "Oswald";
+    font-family: "Montserrat";
     background: #DDD;
     border-bottom: 1px solid; 
     padding: 8px;
@@ -75,7 +75,7 @@ body{
   }
 
   #container header h1{
-    font-size: 2em;
+    font-size: 3em;
     margin: 1px;
     color: green;
 
