--- a/modulo_2/lab2/css/styles.css
+++ b/modulo_2/lab2/css/styles.css
@@ -1,5 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Poiret+One);
-@import url(https://fonts.googleapis.com/css?family=Oswald);
+@import url(https://fonts.googleapis.com/css?family=Poiret+One|Oswald);
 * {
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
